--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
               <p class="text-center h3" id="temp"></p>
               <p class="text-center h3" id="humidity"></p>
               <p class="text-center h3" id="windSpeed"></p>
-              <p class="text-center h3" id="UVIndex">
-                <span id="UVInumber"></span>
-              </p>
+              <p class="text-center h3" id="UVIndex"></p>
             </div>
           <div class="container show hidden">
             <div class="header"><h1>5-day Forecast</h1></div>
